--- a/pags/pagBase/style.css
+++ b/pags/pagBase/style.css
@@ -1,5 +1,5 @@
 section{
-    background: #f5843493;
+    background: #f58434c7;
     border-radius: 20px;
     padding: 2rem;
     width: 50rem;
@@ -7,36 +7,10 @@ section{
     margin-top: 1rem;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.377);
     
-    }
-    
-    footer{
-        text-align: center;
-        color: antiquewhite;
-        font-style: italic;
-    
-        
-    }
-    #hora{
-        display: flex;
-        justify-content: space-around;
-        padding: 1rem;
-        align-items: center;
-    }
-    
-    #res3{
-        margin-top: 1rem;
-        
-    }
-    #it{
-        display: flex;
-    
-        align-items: center;
-        padding: 0.5rem;
-    
-    }
-    #div3{
-        display: contents;
-    }
+    }   
     #s3{
         text-align: center;
+    }
+    .s1{
+        margin-top: 1rem;
     }
