--- a/style.css
+++ b/style.css
@@ -152,24 +152,6 @@ nav{
     align-items: center;
 }
 
-.contati{
-    
-    padding: 10px;
-    
-}
-
-.rede{
-    width: 2vw;
-    margin: 5px 13px 5px;
-}
-
-.t1{
-    margin: 5px;
-}
-.t2{
-    margin: 5px;
-}
-
 main{
     justify-content: space-around;
     height: 50rem;
@@ -181,22 +163,21 @@ main{
     margin-left: 15vh;
 }
 
-
-
-
 body{
     background-image: url(/elementos/gif/ninja-animate.svg);
     background-repeat: no-repeat;
-    background-position: left;
+    background-position: center;
 
+}
+footer{
+    text-align: center;
+    color: antiquewhite;
+    font-style: italic;
 }
 
 /* CSS das próx pág´s daqui para baixo*/
-
-
-
 section{
-    background: #f5843493;
+    background: #f58434c7;
     border-radius: 20px;
     padding: 2rem;
     width: 50rem;
@@ -204,35 +185,12 @@ section{
     margin-top: 1rem;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.377);
     
-    }
-    
-    footer{
-        text-align: center;
-        color: antiquewhite;
-        font-style: italic;
-    
-        
-    }
-    #hora{
-        display: flex;
-        justify-content: space-around;
-        padding: 1rem;
-        align-items: center;
-    }
-    
-    #res3{
-        margin-top: 1rem;
-        
-    }
-    #it{
-        display: flex;
-    
-        align-items: center;
-        padding: 0.5rem;
-    
-    }
-    #div3{
-        display: contents;
-    }
+    }   
     #s3{
-        text-align: center;}
+        text-align: center;
+    }
+    .s1{
+        margin-top: 1rem;
+    }
+    
+    
