--- a/style.css
+++ b/style.css
@@ -163,12 +163,7 @@ main{
     margin-left: 15vh;
 }
 
-body{
-    background-image: url(/elementos/gif/ninja-animate.svg);
-    background-repeat: no-repeat;
-    background-position: center;
 
-}
 footer{
     text-align: center;
     color: antiquewhite;
@@ -192,4 +187,69 @@ section{
     .s1{
         margin-top: 1rem;
     }
+
+    body{
+        background-image: url(/elementos/gif/ninja-animate.svg);
+        background-repeat: no-repeat;
+        background-position: center;
+    }
+
+
+
+    /*_______________________________________________________________________*/
+
+
+
+   
+
+    #app {
+        background-color: #F58634;
+        padding: 20px;
+        border-radius: 8px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        width: 65%;
+        margin-left: 17%;
+    }
     
+
+   .input{
+        width: 16%;
+        padding: 8px;
+        margin-bottom: 16px;
+        box-sizing: border-box;
+    }
+    
+    button {
+        background-color: #4caf50;
+        color: white;
+        padding: 10px;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+    }
+    
+    button:hover {
+        background-color: #45a049;
+    }
+    
+    table {
+        width: 100%;
+        border-collapse: collapse;
+        margin-top: 15px;
+    }
+    
+    th, td {
+        border: 1px solid #ddd;
+        padding: 8px;
+        text-align: center;
+        
+        padding: 8px;
+    
+        margin-left: 17%;
+
+        width: 16%;
+        padding: 8px;
+        margin-bottom: 16px;
+        box-sizing: border-box;
+        
+    }
